Use legacy-peer-deps for Vercel

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,9 @@
 {
   "build": {
-    "env": {
-      "NPM_FLAGS": "--legacy-peer-deps"
+    "env": {},
+    "commands": {
+      "install": "npm install --legacy-peer-deps",
+      "build": "react-scripts build"
     }
   }
 }
