--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,4 @@
 {
-  "build": {
-    "env": {},
-    "commands": {
-      "install": "npm install --legacy-peer-deps",
-      "build": "react-scripts build"
-    }
-  }
+  "buildCommand": "npm install --legacy-peer-deps && npm run build",
+  "outputDirectory": "build"
 }
