--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "chart.js": "^4.5.0",
     "i18next": "^23.10.1",
     "localforage": "^1.10.0",
+    "lucide-react": "^0.544.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
     "react-confetti": "^6.4.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.5.0",
     "react-router-dom": "^7.9.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "recharts": "^3.2.1",
     "web-vitals": "^2.1.4"
   },
@@ -46,6 +47,13 @@
     ]
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.13",
+    "@tailwindcss/postcss7-compat": "^2.2.17",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-preset-env": "^6.7.2",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "typescript": "^4.9.5"
   }
 }
